Resolved merge conflict in contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,3 +4,4 @@
     </body>
 </html>"<<<< feature b added to this file >>>>" 
 "feature b added to this file" 
+"feature b added to this file<style> <style>" 
