--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
-<html>
+<html><head></head>
     <body>
         
     </body>
 </html>"<<<< feature b added to this file >>>>" 
 "feature b added to this file" 
 "feature b added to this file<style> <style>" 
+<
