Edit contact.html in feature_b

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <html><head></head>
     <body>
-        
+        <p>This is from feature-b</p>
+
     </body>
 </html>"<<<< feature b added to this file >>>>" 
 "feature b added to this file" 
