Edit contact.html in main

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html><head></head>
     <body>
-        <p>This is from feature-b</p>
+        <p>This is from main</p>
 
     </body>
 </html>"<<<< feature b added to this file >>>>" 
